    [ticket:2462]

  - [feature] The "required" flag is set to
    True by default, if not passed explicitly,
    on bindparam() if the "value" or "callable"
    parameters are not passed.
    This will cause statement execution to check
    for the parameter being present in the final
    collection of bound parameters, rather than
    implicitly assigning None. [ticket:2556]

  - [bug] The names of the columns on the
    .c. attribute of a select().apply_labels()
    is now based on <tablename>_<colkey> instead
    of <tablename>_<colname>, for those columns
    that have a distinctly named .key.
    [ticket:2397]

  - [feature] Inspector.get_primary_keys() is
    deprecated; use Inspector.get_pk_constraint().
    Courtesy Diana Clarke.  [ticket:2422]

  - [bug] The autoload_replace flag on Table,
    when False, will cause any reflected foreign key
    constraints which refer to already-declared
    columns to be skipped, assuming that the
    in-Python declared column will take over
    the task of specifying in-Python ForeignKey
    or ForeignKeyConstraint declarations.

  - [bug] The ResultProxy methods inserted_primary_key,
    last_updated_params(), last_inserted_params(),
    postfetch_cols(), prefetch_cols() all
    assert that the given statement is a compiled
    construct, and is an insert() or update()
    statement as is appropriate, else
    raise InvalidRequestError.  [ticket:2498]

  - [feature] New C extension module "utils" has
    been added for additional function speedups
    as we have time to implement.

  - ResultProxy.last_inserted_ids is removed,
    replaced by inserted_primary_key.

- sql
  - [feature] Major rework of operator system
    in Core, to allow redefinition of existing
    operators as well as addition of new operators
    at the type level.  New types can be created
    from existing ones which add or redefine
    operations that are exported out to column
    expressions, in a similar manner to how the